Fixed scrolly telling on mobile

--- a/src/css/story/clothes.styl
+++ b/src/css/story/clothes.styl
@@ -24,6 +24,7 @@
       max-width 30rem
       margin 0 auto
       padding 1rem
+      z-index 200
       .step-prose
         background-color rgba(white, 0.9)
         border 1px solid $gray
